# Repository1

./: .gitignore  Cmmdc&Cmmmc.py  Eratostene.py  Input.in  Lee.py  Output.out  README.md  Sierpinski.py  Tema 3.py  Tema 5.py
Apps/Pathfinding_Algorithms_VIsualized/: main.py
Apps/Single-Script apps/: ADFGVX.py  Polybius_Cipher.py  Sierpinski_Triangle.py
Apps/Sorting Algorithms Visualizer/: Sorting.py  Utilities.py  main.py
Apps/Thingy2/: Data Structures.py  main.py  requirements
GUI Program Test/: App.py  Sierpinski_Triangle.py
Half-baked Apps/Sorting Algorithms Visualizer/: Requirements to run script.txt  Sorting.py  main.py
Half-baked Apps/Thingy/: Main.py  Sorting.py  UI.py  (+2 more)
Lab Sem 2/: Lab 2.py
LabOOP/Lab11 - Copy/: CMakeLists.txt  main.cpp
LabOOP/Lab11 - Copy/Header/: CSVReader.h  ListaStudenti.h  Student.h
LabOOP/Lab11 - Copy/Source/: ListaStudenti.cpp
LabOOP/Lab12/: CMakeLists.txt  main.cpp
LabOOP/Lab12/Header/: ListaStudenti.h  Student.h  TipuriDeDate.h
LabOOP/Lab12/Source/: CSVReader.cpp  ListaStudenti.cpp  Student.cpp
LabOOP/Lab3/: CMakeLists.txt  main.cpp
LabOOP/Lab3/Header/: CSVReader.h  ListaStudenti.h  Student.h
LabOOP/Lab3/Source/: CSVReader.cpp  ListaStudenti.cpp  Student.cpp
Lab_An_1_Sem_2/: test.py
Laboratoare Sem 2/: Input.in  Lab 1.py  Lab 2.py
Scripts/: ADFGVX.py  Better_Sierpinski_Carpet.py  Cmmdc&Cmmmc.py  Coroutines.py  Polybius.py  Polybius_Cipher.py  Polybius_Cipher.spec  Sierpinski.py  Sierpinski_Triangle.py  Tema 5.py
Teme vechi/: Tema 2  Tema 3.py  Tema 4.py
Tests/: Lee Test.txt  SIerpinski test.txt
(+192 files in other folders)
